--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="Interpolation.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Network.cpp" />
     <ClCompile Include="OwnerList.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Projectile.cpp" />
@@ -69,6 +70,7 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
     <ClInclude Include="NavMesh.h" />
+    <ClInclude Include="Network.h" />
     <ClInclude Include="OwnerList.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Projectile.h" />
