Animation issues: -Unable to find anim nodes -Bone transform assignment fetch fails

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="ComponentForce.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="NavMesh.h" />
     <ClInclude Include="Network.h" />
     <ClInclude Include="OwnerList.h" />
