--- a/Mek/Mek.vcxproj.filters
+++ b/Mek/Mek.vcxproj.filters
@@ -242,6 +242,9 @@
     <ClInclude Include="Network.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragment-shader.frag">
