--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -24,16 +24,20 @@
     <ClCompile Include="ConsoleMagic.cpp" />
     <ClCompile Include="Framebuffer.cpp" />
     <ClCompile Include="FramebufferEffects.cpp" />
-    <ClCompile Include="FSound.cpp" />
-    <ClCompile Include="FSoundManager.cpp" />
-    <ClCompile Include="FSystem.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ComponentInput.cpp" />
+    <ClCompile Include="include\SlimManager\Manager.cpp" />
+    <ClCompile Include="include\SlimManager\PresetManager.cpp" />
+    <ClCompile Include="include\SlimManager\RNode.cpp" />
+    <ClCompile Include="include\SlimManager\RNodeManager.cpp" />
+    <ClCompile Include="include\SlimManager\Sound.cpp" />
+    <ClCompile Include="include\SlimManager\SoundList.cpp" />
+    <ClCompile Include="include\SlimManager\SoundManager.cpp" />
+    <ClCompile Include="include\SlimManager\SoundNetwork.cpp" />
+    <ClCompile Include="include\SlimManager\SoundSystem.cpp" />
     <ClCompile Include="Interpolation.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
-    <ClCompile Include="Network.cpp" />
-    <ClCompile Include="OwnerList.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Projectile.cpp" />
     <ClCompile Include="RayVsTriangle.cpp" />
@@ -60,19 +64,24 @@
     <ClInclude Include="ConsoleMagic.h" />
     <ClInclude Include="Framebuffer.h" />
     <ClInclude Include="FramebufferEffects.h" />
-    <ClInclude Include="FSound.h" />
-    <ClInclude Include="FSoundManager.h" />
-    <ClInclude Include="FSystem.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ComponentInput.h" />
     <ClInclude Include="ComponentLight.h" />
     <ClInclude Include="ComponentForce.h" />
+    <ClInclude Include="include\SlimManager\Manager.h" />
+    <ClInclude Include="include\SlimManager\Network.h" />
+    <ClInclude Include="include\SlimManager\PresetManager.h" />
+    <ClInclude Include="include\SlimManager\RNode.h" />
+    <ClInclude Include="include\SlimManager\RNodeManager.h" />
+    <ClInclude Include="include\SlimManager\Sound.h" />
+    <ClInclude Include="include\SlimManager\SoundList.h" />
+    <ClInclude Include="include\SlimManager\SoundManager.h" />
+    <ClInclude Include="include\SlimManager\SoundNetwork.h" />
+    <ClInclude Include="include\SlimManager\SoundSystem.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="NavMesh.h" />
-    <ClInclude Include="Network.h" />
-    <ClInclude Include="OwnerList.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="RayVsTriangle.h" />
