A bunch of gameplay and backend updates. I was trying to add a name system to add to the highscore system. Then I realized I made a dumb. So... This is just going up because I need should push this at some point.

--- a/Mek/Mek.vcxproj.filters
+++ b/Mek/Mek.vcxproj.filters
@@ -272,6 +272,9 @@
     <ClInclude Include="include\SlimManager\SoundNetwork.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MenuSelectionVariables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragment-shader.frag">
