--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="include\SlimManager\SoundSystem.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="LightComponent.h" />
+    <ClInclude Include="MenuSelectionVariables.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="NavMesh.h" />
     <ClInclude Include="Program.h" />
