--- a/Mek/Mek.vcxproj.filters
+++ b/Mek/Mek.vcxproj.filters
@@ -275,6 +275,9 @@
     <ClInclude Include="MenuSelectionVariables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SaveFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="fragment-shader.frag">
