Fixued up god rays. They're much sexier now. Also, changed up the main menu. Not sure which is nicer.

--- a/Mek/Mek.vcxproj
+++ b/Mek/Mek.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="MenuSelectionVariables.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="NavMesh.h" />
+    <ClInclude Include="ParticleEmmiter.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="Projectile.h" />
     <ClInclude Include="RayVsTriangle.h" />
@@ -103,6 +104,7 @@
     <Text Include="vertex-shader.vert" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="AddTwoTextures.frag" />
     <None Include="AIBehaviour.inl" />
     <None Include="AISpawner.inl" />
     <None Include="combine.frag" />
